<resources>
    <string name="app_name">Memory Game</string>
    <string name="game_title">Memory Game</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="stats">Statistics</string>
    <string name="configuration_title">Select configuration</string>
    <string name="play_with_cards">Play with %d cards</string>
    <string name="select_configuration">Select configuration</string>
    <string name="settings_title">Settings</string>
    <string name="appearance_category">Appearance</string>
    <string name="language_category">Language</string>
    <string name="dark_theme_title">Dark Theme</string>
    <string name="dark_theme_desc">Enable dark mode</string>
    <string name="language_title">Language</string>
    <string name="language_desc">Change app language</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="stats_title">Game Statistics</string>
    <string name="no_stats_data">No statistics data</string>
    <string name="start_time">Start time:</string>
    <string name="duration">Duration:</string>
    <string name="cards_count">Cards:</string>
    <string name="attempts">Attempts:</string>
    <string name="attempts_label">Attempts</string>
    <string name="matched_pairs_label">Matched Pairs</string>
    <string name="time_label">Time</string>
    <string name="date_format">yyyy-MM-dd HH:mm</string>
    <string name="duration_format">%1$d min %2$d sec</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="congratulations">Congratulations!</string>
    <string name="game_completed">You have completed the game!</string>
    <string name="back">Back</string>
    <string name="play_title">Play Space</string>
</resources>